k8s/prod/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: prod
spec:
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: backend
  type: ClusterIP
