k8s/prod/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: prod
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: frontend
  type: ClusterIP
