k8s/prod/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: prod
spec:
  ports:
  - port: 27017
    targetPort: 27017
  selector:
    app: mongo
  clusterIP: None
